<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="SIP ACCOUNT" >
        <EditTextPreference
            android:key="sip_account_username"
            android:title="Username*" />
        <EditTextPreference
            android:key="sip_account_password"
            android:title="Password*" />
        <EditTextPreference
            android:key="sip_account_domain"
            android:defaultValue="120.79.77.197:5060"
            android:title="Domain*" />
        <EditTextPreference
            android:key="sip_account_displayname"
            android:title="Display name" />

        <ListPreference  
            android:dialogTitle="Select Transport"  
            android:entries="@array/entries_transport_list"  
            android:entryValues="@array/entryvalues_transport_list"  
            android:key="sip_account_transport"  
            android:summary=""  
            android:title="Transport" /> 
            
        <PreferenceScreen
            android:key="screen_preference_account_advanced"
            android:title="More Options" >
            <EditTextPreference
            android:key="sip_account_auth_name"
            android:title="Auth name" />
            <CheckBoxPreference
                android:key="sip_account_use_proxy"
                android:summary="Route all calls through SIP proxy"
                android:title="Use Oubound Proxy" />
            <EditTextPreference
            android:key="sip_account_proxy"
            android:dependency="sip_account_use_proxy"
            android:title="Porxy" />
        </PreferenceScreen>
           
    </PreferenceCategory>
    <PreferenceCategory android:title="video settings" >
         <PreferenceScreen
        android:key="@string/pref_videosettings_key"
        android:title="@string/pref_videosettings_title">

             <CheckBoxPreference
                 android:key="@string/pref_videocall_key"
                 android:title="@string/pref_videocall_title"
                 android:dialogTitle="@string/pref_videocall_dlg"
                 android:defaultValue="@string/pref_videocall_default" />

             <CheckBoxPreference
                 android:key="@string/pref_screencapture_key"
                 android:title="@string/pref_screencapture_title"
                 android:defaultValue="@string/pref_screencapture_default" />

             <CheckBoxPreference
                 android:key="@string/pref_camera2_key"
                 android:title="@string/pref_camera2_title"
                 android:defaultValue="@string/pref_camera2_default" />

             <ListPreference
                 android:key="@string/pref_resolution_key"
                 android:title="@string/pref_resolution_title"
                 android:defaultValue="@string/pref_resolution_default"
                 android:dialogTitle="@string/pref_resolution_dlg"
                 android:entries="@array/videoResolutions"
                 android:entryValues="@array/videoResolutionsValues" />

             <ListPreference
                 android:key="@string/pref_fps_key"
                 android:title="@string/pref_fps_title"
                 android:defaultValue="@string/pref_fps_default"
                 android:dialogTitle="@string/pref_fps_dlg"
                 android:entries="@array/cameraFps"
                 android:entryValues="@array/cameraFps" />

             <CheckBoxPreference
                 android:key="@string/pref_capturequalityslider_key"
                 android:title="@string/pref_capturequalityslider_title"
                 android:dialogTitle="@string/pref_capturequalityslider_dlg"
                 android:defaultValue="@string/pref_capturequalityslider_default" />

             <ListPreference
                 android:key="@string/pref_maxvideobitrate_key"
                 android:title="@string/pref_maxvideobitrate_title"
                 android:defaultValue="@string/pref_maxvideobitrate_default"
                 android:dialogTitle="@string/pref_maxvideobitrate_dlg"
                 android:entries="@array/startBitrate"
                 android:entryValues="@array/startBitrate" />

             <EditTextPreference
                 android:key="@string/pref_maxvideobitratevalue_key"
                 android:title="@string/pref_maxvideobitratevalue_title"
                 android:inputType="number"
                 android:defaultValue="@string/pref_maxvideobitratevalue_default"
                 android:dialogTitle="@string/pref_maxvideobitratevalue_dlg" />

             <ListPreference
                 android:key="@string/pref_videocodec_key"
                 android:title="@string/pref_videocodec_title"
                 android:defaultValue="@string/pref_videocodec_default"
                 android:dialogTitle="@string/pref_videocodec_dlg"
                 android:entries="@array/videoCodecs"
                 android:entryValues="@array/videoCodecs" />

             <CheckBoxPreference
                 android:key="@string/pref_hwcodec_key"
                 android:title="@string/pref_hwcodec_title"
                 android:dialogTitle="@string/pref_hwcodec_dlg"
                 android:defaultValue="@string/pref_hwcodec_default" />

             <CheckBoxPreference
                 android:key="@string/pref_capturetotexture_key"
                 android:title="@string/pref_capturetotexture_title"
                 android:dialogTitle="@string/pref_capturetotexture_dlg"
                 android:defaultValue="@string/pref_capturetotexture_default" />

             <CheckBoxPreference
                 android:key="@string/pref_flexfec_key"
                 android:title="@string/pref_flexfec_title"
                 android:dialogTitle="@string/pref_flexfec_dlg"
                 android:defaultValue="@string/pref_flexfec_default" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="audio settings" >
        <PreferenceScreen
        android:key="@string/pref_audiosettings_key"
        android:title="@string/pref_audiosettings_title">

            <ListPreference
                android:key="@string/pref_startaudiobitrate_key"
                android:title="@string/pref_startaudiobitrate_title"
                android:defaultValue="@string/pref_startaudiobitrate_default"
                android:dialogTitle="@string/pref_startaudiobitrate_dlg"
                android:entries="@array/startBitrate"
                android:entryValues="@array/startBitrate" />

            <EditTextPreference
                android:key="@string/pref_startaudiobitratevalue_key"
                android:title="@string/pref_startaudiobitratevalue_title"
                android:inputType="number"
                android:defaultValue="@string/pref_startaudiobitratevalue_default"
                android:dialogTitle="@string/pref_startaudiobitratevalue_dlg" />

            <ListPreference
                android:key="@string/pref_audiocodec_key"
                android:title="@string/pref_audiocodec_title"
                android:defaultValue="@string/pref_audiocodec_default"
                android:dialogTitle="@string/pref_audiocodec_dlg"
                android:entries="@array/audioCodecs"
                android:entryValues="@array/audioCodecs" />

            <CheckBoxPreference
                android:key="@string/pref_noaudioprocessing_key"
                android:title="@string/pref_noaudioprocessing_title"
                android:dialogTitle="@string/pref_noaudioprocessing_dlg"
                android:defaultValue="@string/pref_noaudioprocessing_default" />

            <CheckBoxPreference
                android:key="@string/pref_aecdump_key"
                android:title="@string/pref_aecdump_title"
                android:dialogTitle="@string/pref_aecdump_dlg"
                android:defaultValue="@string/pref_aecdump_default" />

            <CheckBoxPreference
                android:key="@string/pref_opensles_key"
                android:title="@string/pref_opensles_title"
                android:dialogTitle="@string/pref_opensles_dlg"
                android:defaultValue="@string/pref_opensles_default" />

            <CheckBoxPreference
                android:key="@string/pref_disable_built_in_aec_key"
                android:title="@string/pref_disable_built_in_aec_title"
                android:dialogTitle="@string/pref_disable_built_in_aec_dlg"
                android:defaultValue="@string/pref_disable_built_in_aec_default" />

            <CheckBoxPreference
                android:key="@string/pref_disable_built_in_agc_key"
                android:title="@string/pref_disable_built_in_agc_title"
                android:dialogTitle="@string/pref_disable_built_in_agc_dlg"
                android:defaultValue="@string/pref_disable_built_in_agc_default" />

            <CheckBoxPreference
                android:key="@string/pref_disable_built_in_ns_key"
                android:title="@string/pref_disable_built_in_ns_title"
                android:dialogTitle="@string/pref_disable_built_in_ns_dlg"
                android:defaultValue="@string/pref_disable_built_in_ns_default" />

            <CheckBoxPreference
                android:key="@string/pref_enable_level_control_key"
                android:title="@string/pref_enable_level_control_title"
                android:defaultValue="@string/pref_enable_level_control_default" />

            <CheckBoxPreference
                android:key="@string/pref_disable_webrtc_agc_and_hpf_key"
                android:title="@string/pref_disable_webrtc_agc_and_hpf_title"
                android:defaultValue="@string/pref_disable_webrtc_agc_default" />

            <ListPreference
                android:key="@string/pref_speakerphone_key"
                android:title="@string/pref_speakerphone_title"
                android:defaultValue="@string/pref_speakerphone_default"
                android:dialogTitle="@string/pref_speakerphone_dlg"
                android:entries="@array/speakerphone"
                android:entryValues="@array/speakerphoneValues" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="data settings" >
        <PreferenceScreen
            android:key="@string/pref_datasettings_key"
            android:title="@string/pref_datasettings_title">

            <CheckBoxPreference
                android:key="@string/pref_enable_datachannel_key"
                android:title="@string/pref_enable_datachannel_title"
                android:defaultValue="@string/pref_enable_datachannel_default" />

            <CheckBoxPreference
                android:key="@string/pref_ordered_key"
                android:title="@string/pref_ordered_title"
                android:defaultValue="@string/pref_ordered_default" />

            <EditTextPreference
                android:key="@string/pref_data_protocol_key"
                android:title="@string/pref_data_protocol_title"
                android:inputType="text"
                android:defaultValue="@string/pref_data_protocol_default"
                android:dialogTitle="@string/pref_data_protocol_dlg" />

            <CheckBoxPreference
                android:key="@string/pref_negotiated_key"
                android:title="@string/pref_negotiated_title"
                android:defaultValue="@string/pref_negotiated_default" />

            <EditTextPreference
                android:key="@string/pref_max_retransmit_time_ms_key"
                android:title="@string/pref_max_retransmit_time_ms_title"
                android:inputType="number"
                android:defaultValue="@string/pref_max_retransmit_time_ms_default"
                android:dialogTitle="@string/pref_max_retransmit_time_ms_dlg" />

            <EditTextPreference
                android:key="@string/pref_max_retransmits_key"
                android:title="@string/pref_max_retransmits_title"
                android:inputType="number"
                android:defaultValue="@string/pref_max_retransmits_default"
                android:dialogTitle="@string/pref_max_retransmits_dlg" />

            <EditTextPreference
                android:key="@string/pref_data_id_key"
                android:title="@string/pref_data_id_title"
                android:inputType="number"
                android:defaultValue="@string/pref_data_id_default"
                android:dialogTitle="@string/pref_data_id_dlg" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="net settings" >
        <PreferenceScreen
            android:key="screen_preference_network"
            android:title="network." >
			<EditTextPreference
                android:key="sip_account_stun_server"
                android:defaultValue="120.25.211.29"
                android:title="Stun Server" />
			<CheckBoxPreference
                android:key="sip_account_use_ice_mode"
                android:summary="Use turn relay"
                android:title="ICE" 
                android:defaultValue="false"/>
            <EditTextPreference
                android:key="sip_account_turn_user"
                android:dependency="sip_account_use_ice_mode"
                android:defaultValue="700"
                android:title="Turn User" />
            <EditTextPreference
                android:key="sip_account_turn_password"
                android:dependency="sip_account_use_ice_mode"
                android:defaultValue="700"
                android:title="Turn Password" />
            <EditTextPreference
                android:key="sip_account_turn_server"
                android:dependency="sip_account_use_ice_mode"
                android:defaultValue="120.25.211.29"
                android:title="Turn Server" />
        </PreferenceScreen>
      </PreferenceCategory>
</PreferenceScreen>